--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,5 +4,11 @@
 
     <uses-sdk android:minSdkVersion="8"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
+        <activity android:name="GameActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
