Fix app reset on changing orientation (by locking it completely)

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,8 @@
 
     <uses-sdk android:minSdkVersion="8"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".model.GameActivity">
+        <activity android:name=".model.GameActivity"
+                android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
